Introduce API Register User
