# internal/routers/routes.go
@@ -5,10 +5,12 @@ type Routes struct {
 	HealthCheck  string // Health check endpoint path
 	LinkShorten  string // Link shorten endpoint path
 	LinkRedirect string // Link redirect endpoint path
+	UserRegister string // Link Users register endpoint path
 }
 
 var Endpoints = Routes{
 	HealthCheck:  "/health-check",
 	LinkShorten:  "/links/shorten",
 	LinkRedirect: "/links/redirect/*code",
+	UserRegister: "/users/register",
 }
